--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <tile>Java Fullstack and Management</tile>
+    <title>Java Fullstack and Management</title>
 </head>
 
 <body>
