Fixing the image setup.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="header">
-        <h2>Java Full Stack & Management Blog</h2>
+        <h2>Java Full Stack Management Blog</h2>
     </div>
 
     <div class="row">
@@ -18,8 +18,7 @@
             <div class="card">
                 <h2>New Features of JDK 23</h2>
                 <h5>Gatherers Upgrades Pipeline Design Pattern, Oct 20, 2024</h5>
-                <div class="fakeimg" style="height:200px;">
-                    <img src="./images/JDK23/rc24-java23.jpg" alt="New features of jdk23" />
+                <div class="fakeimg" style="height:200px;" id="jdk23">
                 </div>
                 <p>
                     JDK 23 introduces several new features including enhanced primitive type patterns, flexible
@@ -44,9 +43,7 @@
             <div class="card">
                 <h2>Multi Environment in Angular</h2>
                 <h5>How to handle Multi environment in Angular, Oct 20, 2024</h5>
-                <div class="fakeimg" style="height:200px;">
-                    <img src="./images/muliple_angular_environments/environment.png" />
-                    <img src="./images/muliple_angular_environments/coniguration.png" />
+                <div class="fakeimg" id="environment">
                 </div>
                 <p>angular.json executes the replacement which is configured under build section.</p>
                 <p>By running below ng command we can shift the configration from to the environment we need</p>
