Adding details of Remote Jobs and OpenAI.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <title>Java Fullstack and Management</title>
@@ -15,10 +16,72 @@
 
     <div class="row">
         <div class="leftcolumn">
+
+            <div class="card">
+                <h2>Remote Jobs</h2>
+                <h5>Remote Jobs links, Oct 22, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="RemoteJobsImage">
+                </div>
+                <p>
+                    The remote work landscape has boomed in recent years, offering a world of possibilities for those
+                    seeking a work style that better suits their needs.
+                </p>
+                <p>
+                    Following is the list of Job sites for finding Remote Jobs
+                </p>
+                <p>
+                    <a href="https://remote4me.com" target="_blank">
+                        https://remote4me.com
+                    </a>
+                </p>
+                <p>
+                    <a href="https://dynamitejobs.com" target="_blank">
+                        https://dynamitejobs.com
+                    </a>
+                </p>
+                <p>
+                    <a href="https://www.flexjobs.com" target="_blank">
+                        https://www.flexjobs.com
+                    </a>
+                </p>
+                <p>
+                    <a href="https://remoteok.com" target="_blank">
+                        https://remoteok.com
+                    </a>
+                </p>
+                <p>
+                    <a href="https://remoteok.com" target="_blank">
+                        https://remoteok.com
+                    </a>
+                </p>
+                <p>
+                    <a href="https://compose.ly" target="_blank">
+                        https://compose.ly
+                    </a>
+                </p>
+            </div>
+            <div class="card">
+                <h2>Introduction to Generative AI</h2>
+                <h5>About GenAI, Oct 21, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="openAIImage">
+                </div>
+                <p>
+                    AI is an Discipline, it has to do with the theory and methods to build machines that think and act
+                    like humans.
+                </p>
+                <p>
+                    For more information please visit below link
+                </p>
+                <p>
+                    <a href="https://www.cloudskillsboost.google/course_templates/536/video/500791" target="_blank">
+                        Generative AI
+                    </a>
+                </p>
+            </div>
             <div class="card">
                 <h2>New Features of JDK 23</h2>
                 <h5>Gatherers Upgrades Pipeline Design Pattern, Oct 20, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id="jdk23">
+                <div class="fakeimg" style="height:200px;" id="jdk23Image">
                 </div>
                 <p>
                     JDK 23 introduces several new features including enhanced primitive type patterns, flexible
@@ -43,7 +106,7 @@
             <div class="card">
                 <h2>Multi Environment in Angular</h2>
                 <h5>How to handle Multi environment in Angular, Oct 20, 2024</h5>
-                <div class="fakeimg" id="environment">
+                <div class="fakeimg" id="environmentImage">
                 </div>
                 <p>angular.json executes the replacement which is configured under build section.</p>
                 <p>By running below ng command we can shift the configration from to the environment we need</p>
@@ -72,7 +135,7 @@
     </div>
 
     <div class="footer">
-        <h2>Footer</h2>
+        <h2>© 2024 Raghava</h2>
     </div>
 
 </body>
