Missing images content.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,27 @@
         <div class="leftcolumn">
 
             <div class="card">
+                <h2>Handling Missing Images in Angular</h2>
+                <h5>Missing images, Oct 23, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="openAIImage">
+                </div>
+                <p>
+                    When an image is not available for display an gray patch along with Alternative Text will be shown
+                    to the user.
+                    So to hide the blank image and alternat text, we can hide the image dynamically.
+                </p>
+                <p>
+                    For more information please visit below link
+                </p>
+                <p>
+                    <a href="https://www.damirscorner.com/blog/posts/20210924-HandleMissingImagesInAngular.html"
+                        target="_blank">
+                        Handle missing images in Angular
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
                 <h2>Remote Jobs</h2>
                 <h5>Remote Jobs links, Oct 22, 2024</h5>
                 <div class="fakeimg" style="height:200px;" id="RemoteJobsImage">
@@ -60,6 +81,7 @@
                     </a>
                 </p>
             </div>
+
             <div class="card">
                 <h2>Introduction to Generative AI</h2>
                 <h5>About GenAI, Oct 21, 2024</h5>
