GCP to AWS S3 migration

--- a/index.html
+++ b/index.html
@@ -18,6 +18,51 @@
         <div class="leftcolumn">
 
             <div class="card">
+                <h2>GCP to AWS S3 migration</h2>
+                <h5>File Migration, Oct 24, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="AWSToGCP">
+                </div>
+                <p>
+                    AWS DataSync can be used for migration to Amazon S3 from Google Cloud
+                    Storage works best if you are looking for a secure managed service for your data transfer workflow
+                    that provides data validation, integrated auditing and monitoring capabilities, and the ability to
+                    transfer changed data.
+                </p>
+                <p>
+                    For more information please visit below link
+                </p>
+                <p>
+                    <a href="https://aws.amazon.com/blogs/storage/migrating-google-cloud-storage-to-amazon-s3-using-aws-datasync/"
+                        target="_blank">
+                        GCP_to_AWS
+                    </a>
+                </p>
+            </div>
+
+
+            <div class="card">
+                <h2>Handling Missing Images in Angular</h2>
+                <h5>Missing images, Oct 23, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="MissingImage">
+                </div>
+                <p>
+                    When an image is not available for display an gray patch along with Alternative Text will be shown
+                    to the user.
+                    So to hide the blank image and alternat text, we can hide the image dynamically.
+                </p>
+                <p>
+                    For more information please visit below link
+                </p>
+                <p>
+                    <a href="https://www.damirscorner.com/blog/posts/20210924-HandleMissingImagesInAngular.html"
+                        target="_blank">
+                        Handle missing images in Angular
+                    </a>
+                </p>
+            </div>
+
+
+            <div class="card">
                 <h2>Handling Missing Images in Angular</h2>
                 <h5>Missing images, Oct 23, 2024</h5>
                 <div class="fakeimg" style="height:200px;" id="openAIImage">
