Added more details about GCP to AWS Data transfer.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                         GCP_to_AWS
                     </a>
                 </p>
+                <p>Following are other approaches for Data Transfers</p>
+                <p>
+                    <a href="https://stackoverflow.com/questions/39329580/exporting-data-from-google-cloud-storage-to-amazon-s3"
+                        target="_blank">
+                        Exporting data from GS to S3
+                    </a>
+                </p>
             </div>
 
 
@@ -61,27 +68,6 @@
                 </p>
             </div>
 
-
-            <div class="card">
-                <h2>Handling Missing Images in Angular</h2>
-                <h5>Missing images, Oct 23, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id="openAIImage">
-                </div>
-                <p>
-                    When an image is not available for display an gray patch along with Alternative Text will be shown
-                    to the user.
-                    So to hide the blank image and alternat text, we can hide the image dynamically.
-                </p>
-                <p>
-                    For more information please visit below link
-                </p>
-                <p>
-                    <a href="https://www.damirscorner.com/blog/posts/20210924-HandleMissingImagesInAngular.html"
-                        target="_blank">
-                        Handle missing images in Angular
-                    </a>
-                </p>
-            </div>
 
             <div class="card">
                 <h2>Remote Jobs</h2>
