PowerBI & Job Search

--- a/index.html
+++ b/index.html
@@ -14,8 +14,107 @@
         <h2>Java Full Stack Management Blog</h2>
     </div>
 
+
+
     <div class="row">
         <div class="leftcolumn">
+
+            <div class="card">
+                <h2>Don’t search for a job, let the job find you.</h2>
+                <h5>New way of Job Search, Oct 26, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="JOB_SEARCH_IMAGE">
+                </div>
+                <p>
+                    <em>“Don’t run behind success, chase Excellence, Success will come behind you.”</em>
+                </p>
+
+                <p><b>4 things to do to Attract a recruiter</b></p>
+
+                <p>
+                    <b>1. Build Your Brand</b>
+                </p>
+                <p>
+                    Create content that demonstrates your skills, such as writing blog posts, making videos, or sharing
+                    insights on platforms like LinkedIn/Twitter.
+                </p>
+                <p>
+                    Make sure your website, portfolio, and social profiles are polished and consistent with your
+                    professional image.
+                </p>
+                <p>
+                    <b>2. Leverage Networking and Connections</b>
+                </p>
+                <p>
+                    Start by attending industry events, webinars, and conferences where you can meet professionals and
+                    peers.
+                </p>
+                <p>
+                    <b>3. Let Recruiters and Opportunities Come to You</b>
+                </p>
+                <p>
+                    Once you’ve established a strong online presence and have built a network, you can begin letting
+                    recruiters and hiring managers come to you.
+                </p>
+                <p>
+                    Make sure to add your areas of expertise. So that they can identify you as a potential candidate.
+                </p>
+
+                <p>
+                    <b>4. Embrace Patience and Persistence</b>
+                </p>
+
+                <p>Building a brand and network takes time and effort, and it won’t happen immediately.</p>
+
+                <p>You’ll need to keep creating content, nurturing relationships, and staying active in your industry.
+                </p>
+
+                <p>It’s important to remember that opportunities will come at the right time, and rushing the process
+                    may
+                    result in taking roles that aren’t the best fit.</p>
+
+                <p>Trust the process, stay consistent in your efforts, and eventually, the right opportunities will come
+                    to
+                    you.</p>
+
+                <p>Following is good websites for Job Search</p>
+
+                <p>
+                    <a href="https://wellfound.com/jobs" target="_blank">
+                        Wellfound
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
+                <h2>PowerBI Introduction</h2>
+                <h5>PowerBI Introduction details, Oct 25, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="POWERBI_IMAGE">
+                </div>
+                <p>
+                    Microsoft Power BI is a complete reporting solution that offers data preparation, data
+                    visualization, distribution, and management through development tools and an online platform.
+                </p>
+                <p>
+                    Power BI can scale from simple reports using a single data source to reports requiring complex data
+                    modeling and consistent themes. Use Power BI to create visually stunning, interactive reports to
+                    serve as the analytics and decision engine behind group projects, divisions, or entire
+                    organizations.
+                </p>
+                <p>
+                    Power BI is an essential tool to data analysts and their organization; however, all data
+                    professionals benefit from understanding how Power BI works to explore and present data insights
+                    within organizations.
+                </p>
+                <p>
+                    For more information please visit below link
+                </p>
+                <p>
+                    <a href="https://learn.microsoft.com/en-us/training/modules/get-started-with-power-bi/1-introduction"
+                        target="_blank">
+                        PowerBI
+                    </a>
+                </p>
+            </div>
 
             <div class="card">
                 <h2>GCP to AWS S3 migration</h2>
