Matplotlib for charts creation.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,39 @@
     <div class="row">
         <div class="leftcolumn">
 
+
             <div class="card">
-                <h2></h2>
+                <h2>Matplotlib</h2>
+                <h5>File Migration, Oct 25, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="matplotlibImage">
+                </div>
+                <p>
+                    Matplotlib is a comprehensive library for creating static, animated, and interactive visualizations
+                    in Python. Matplotlib makes easy things easy and hard things possible.
+                </p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://www.youtube.com/watch?v=f6MksFlxGOU" target="_blank">
+                        Matplotlib Bar Plot with Line Plot
+                    </a>
+                </p>
+                <p>
+                    <a href="https://matplotlib.org/" target="_blank">
+                        Matplotlib
+                    </a>
+                </p>
+
+                <p>
+                    <a href="https://www.w3schools.com/python/matplotlib_getting_started.asp" target="_blank">
+                        W3 Schools for Matplotlib
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
+                <h2>OKTA with Angular & SpringBoot</h2>
                 <h5>File Migration, Oct 24, 2024</h5>
                 <div class="fakeimg" style="height:200px;" id="OKTA_fullstack_image">
                 </div>
