Adding D3 and ChartJS

--- a/index.html
+++ b/index.html
@@ -19,6 +19,58 @@
     <div class="row">
         <div class="leftcolumn">
 
+            <div class="card">
+                <h2>Chart.JS</h2>
+                <h5>Chartjs Intro, Oct 27, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="chartjsLibImage">
+                </div>
+
+                <p>Chart.js comes with built-in TypeScript typings and is compatible with all popular JavaScript
+                    frameworks including React , Vue , Svelte , and Angular . You can use Chart.js directly or leverage
+                    well-maintained wrapper packages that allow for a more native integration with your frameworks of
+                    choice.</p>
+                <p>
+                    Chart.js renders chart elements on an HTML5 canvas unlike several others, mostly D3.js-based,
+                    charting libraries that render as SVG. Canvas rendering makes Chart.js very performant, especially
+                    for large datasets and complex visualizations that would otherwise require thousands of SVG nodes in
+                    the DOM tree.
+                </p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://www.chartjs.org/docs/latest/" target="_blank">
+                        CharJS Library
+                    </a>
+                </p>
+            </div>
+
+
+            <div class="card">
+                <h2>D3.js</h2>
+                <h5>D3.js introduction, Oct 26, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="d3jslibImage">
+                </div>
+                <p>
+                    It is a lightweight javaScript library used to make interactive data visualization in web browsers
+                    using HTML, SVG, and CSS visualizations.
+                </p>
+
+                <p>It is highly effective in working with large datasets.</p>
+
+                <p>
+                    The D3.js library uses pre-built functions to select elements, create SVG objects, style them, and
+                    add transitions, dynamic effects, or tooltips to them.
+                </p>
+                <p>
+                    For more information click on below link:
+                </p>
+                <p>
+                    <a href="https://d3js.org/" target="_blank">
+                        D3 JS Library
+                    </a>
+                </p>
+            </div>
 
             <div class="card">
                 <h2>Matplotlib</h2>
