Added Security Details.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,257 @@
         <div class="leftcolumn">
 
             <div class="card">
+                <h2>What is OpenID Connect ?</h2>
+                <h5>OpenID, Nov 3, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                </div>
+
+                <p>OpenID Connect is an interoperable authentication protocol based on the OAuth 2.0 framework of
+                    specifications (IETF RFC 6749 and 6750). It simplifies the way to verify the identity of users based
+                    on the authentication performed by an Authorization Server and to obtain user profile information in
+                    an interoperable and REST-like manner.</p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://openid.net/developers/how-connect-works/" target="_blank">
+                        Open ID Connect
+                    </a>
+                </p>
+                <p>
+                    <a href="https://www.udemy.com/course/oauth-2-simplified/" target="_blank">
+                        Covering OAuth 2.0, OpenID, PKCE, deprecated flows, JWTs, API Gateways, and scopes. No
+                        programming knowledge needed
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
+                <h2>What is OAuth 2.0 ?</h2>
+                <h5>OAuth 2.0, Nov 2, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                </div>
+
+                <p>OAuth 2.0 is the industry-standard protocol for authorization. OAuth 2.0 focuses on client developer
+                    simplicity while providing specific authorization flows for web applications, desktop applications,
+                    mobile phones, and living room devices. This specification and its extensions are being developed
+                    within the IETF OAuth Working Group.</p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://oauth.net/2/" target="_blank">
+                        Oauth
+                    </a>
+                </p>
+                <p>
+                    <a href="https://www.udemy.com/course/oauth-2-simplified/" target="_blank">
+                        Covering OAuth 2.0, OpenID, PKCE, deprecated flows, JWTs, API Gateways, and scopes. No
+                        programming knowledge needed
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
+                <h2>What is JSON Web Token?</h2>
+                <h5>JWT, Nov 1, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                </div>
+
+                <p>JSON Web Token (JWT) is an open standard (RFC 7519) that defines a compact and self-contained way for
+                    securely transmitting information between parties as a JSON object. This information can be verified
+                    and trusted because it is digitally signed. JWTs can be signed using a secret (with the HMAC
+                    algorithm) or a public/private key pair using RSA or ECDSA.</p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://jwt.io/introduction" target="_blank">
+                        JWT
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
+                <h2>HTTPS Basics</h2>
+                <h5>Encription + SSL Certificate + HTTPS + Cookies, Oct 31, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                </div>
+
+                <p>Encryption is a way of converting plaintext into ciphertext (an encoded text that is not
+                    understandable by the third party). Encryption requires the use of an encryption key and an
+                    encryption algorithm. The key is used to encrypt/decrypt the plaintext into ciphertext. How that key
+                    is used to encrypt the plaintext is defined by the encryption algorithm. Both the receiver and the
+                    sender must have the encryption key.</p>
+                <p>
+                    SSL (Secure Sockets Layer) certificates create an encrypted environment between a client and a
+                    server. A Secure Sockets Layer certificate (SSL certificate) is a small data file installed on a Web
+                    server that allows for a secure connection between the server and a web browser.
+                </p>
+                <p>
+                    In HTTPS, before transferring any data, the client first verifies that the server it is talking to
+                    is the correct server and how the data will be encrypted. This process is called the TLS handshake.
+                </p>
+                <p>
+                    HTTP cookies, or web cookies, are small text files that store small pieces of information. They are
+                    created by the websites we visit and are stored on our browser. Cookies are limited to 4kb in size,
+                    which means they cannot store large amounts of data.
+                </p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://developer.mozilla.org/en-US/docs/Glossary/Encryption" target="_blank">
+                        Encription
+                    </a>
+                </p>
+                <p>
+                    <a href="https://developer.mozilla.org/en-US/docs/Glossary/SSL" target="_blank">
+                        SSL
+                    </a>
+                </p>
+                <p>
+                    <a href="https://developer.mozilla.org/en-US/docs/Glossary/HTTPS" target="_blank">
+                        HTTPS
+                    </a>
+                </p>
+                <p>
+                    <a href="https://developer.mozilla.org/en-US/docs/Glossary/Cookie" target="_blank">
+                        Cookie
+                    </a>
+                </p>
+
+                <p>
+                    <a href="https://www.educative.io/courses/web-security-access-management-jwt-oauth2-openid-connect/what-is-encryption"
+                        target="_blank">
+                        Encription + SSL Certificate + HTTPS + Cookies
+                    </a>
+                </p>
+
+            </div>
+
+            <div class="card">
+                <h2>Denial-of-Service Attack</h2>
+                <h5>DoS, Oct 30, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                </div>
+
+                <p>A denial of service or DoS, attack is a type of attack in which the attacker tries to crash an
+                    application so that the legitimate users are not able to access the application. The attacker does
+                    not gain any benefit from this attack. The main purpose of this attack is to harm an organization,
+                    and is often carried out by a competitor or mischievous hacker.</p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://developer.mozilla.org/en-US/docs/Glossary/DOS_attack" target="_blank">
+                        Denial-of-Service Attack
+                    </a>
+                </p>
+            </div>
+
+
+            <div class="card">
+                <h2>Cross-Origin Resource Sharing</h2>
+                <h5>CORS, Oct 29, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id=CORS_Img">
+                </div>
+
+                <p>CORS (Cross-Origin Resource Sharing) is a system, consisting of transmitting HTTP headers, that
+                    determines whether browsers block frontend JavaScript code from accessing responses for cross-origin
+                    requests.</p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://developer.mozilla.org/en-US/docs/Glossary/CORS" target="_blank">
+                        Cross-Origin Resource Sharing
+                    </a>
+                </p>
+            </div>
+
+
+            <div class="card">
+                <h2>Cross-site scripting</h2>
+                <h5>CSS, Oct 28, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="CSS_Img">
+                </div>
+
+                <p>Cross-site scripting (XSS) is a security exploit which allows an attacker to inject into a website
+                    malicious client-side code. This code is executed by the victims and lets the attackers bypass
+                    access controls and impersonate users. According to the Open Web Application Security Project, XSS
+                    was the seventh most common Web app vulnerability in 2017.</p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://developer.mozilla.org/en-US/docs/Glossary/Cross-site_scripting" target="_blank">
+                        Cross-site scripting
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
+                <h2>Converting HTML to PDF in Java Using Flying Saucer</h2>
+                <h5>Flying Soucer, Oct 29, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="htmlToPDFImg">
+                </div>
+
+                <p>Flying Saucer is an open-source Java library that provides an easy way to convert XHTML/XML documents
+                    to PDF. It utilizes the powerful iText library under the hood for PDF generation.</p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://itextpdf.com/products/convert-html-css-to-pdf-pdfhtml" target="_blank">
+                        IText converting HTML to PDF
+                    </a>
+                </p>
+                <p>
+                    <a href="https://medium.com/@jangacharysri/converting-html-to-pdf-in-java-using-flying-saucer-8d923c309302"
+                        target="_blank">
+                        HTML to PDF using Flying Saucer
+                    </a>
+                </p>
+                <p>
+                    <a href="https://medium.com/javarevisited/html-to-pdf-in-java-using-flying-saucer-f73b70d9014d"
+                        target="_blank">
+                        HTML to PDF using Jsoup and Flying Saucer
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
+                <h2>Converting HTML to PDF in Java Using Flying Saucer</h2>
+                <h5>Flying Soucer, Oct 28, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="htmlToPDFImg">
+                </div>
+
+                <p>Flying Saucer is an open-source Java library that provides an easy way to convert XHTML/XML documents
+                    to PDF. It utilizes the powerful iText library under the hood for PDF generation.</p>
+                <p>
+                    Following are the links for refence:
+                </p>
+                <p>
+                    <a href="https://itextpdf.com/products/convert-html-css-to-pdf-pdfhtml" target="_blank">
+                        IText converting HTML to PDF
+                    </a>
+                </p>
+                <p>
+                    <a href="https://medium.com/@jangacharysri/converting-html-to-pdf-in-java-using-flying-saucer-8d923c309302"
+                        target="_blank">
+                        HTML to PDF using Flying Saucer
+                    </a>
+                </p>
+                <p>
+                    <a href="https://medium.com/javarevisited/html-to-pdf-in-java-using-flying-saucer-f73b70d9014d"
+                        target="_blank">
+                        HTML to PDF using Jsoup and Flying Saucer
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
                 <h2>Chart.JS</h2>
                 <h5>Chartjs Intro, Oct 27, 2024</h5>
                 <div class="fakeimg" style="height:200px;" id="chartjsLibImage">
