Added images to Security cards.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="card">
                 <h2>What is OpenID Connect ?</h2>
                 <h5>OpenID, Nov 3, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                <div class="fakeimg" style="height:200px;" id="OpenIDImg">
                 </div>
 
                 <p>OpenID Connect is an interoperable authentication protocol based on the OAuth 2.0 framework of
@@ -48,7 +48,7 @@
             <div class="card">
                 <h2>What is OAuth 2.0 ?</h2>
                 <h5>OAuth 2.0, Nov 2, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                <div class="fakeimg" style="height:200px;" id="oauthImg">
                 </div>
 
                 <p>OAuth 2.0 is the industry-standard protocol for authorization. OAuth 2.0 focuses on client developer
@@ -74,7 +74,7 @@
             <div class="card">
                 <h2>What is JSON Web Token?</h2>
                 <h5>JWT, Nov 1, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                <div class="fakeimg" style="height:200px;" id="JWTImg">
                 </div>
 
                 <p>JSON Web Token (JWT) is an open standard (RFC 7519) that defines a compact and self-contained way for
@@ -94,7 +94,7 @@
             <div class="card">
                 <h2>HTTPS Basics</h2>
                 <h5>Encription + SSL Certificate + HTTPS + Cookies, Oct 31, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                <div class="fakeimg" style="height:200px;" id="httpBasicImg">
                 </div>
 
                 <p>Encryption is a way of converting plaintext into ciphertext (an encoded text that is not
@@ -121,7 +121,7 @@
                 </p>
                 <p>
                     <a href="https://developer.mozilla.org/en-US/docs/Glossary/Encryption" target="_blank">
-                        Encription
+                        Encryption
                     </a>
                 </p>
                 <p>
@@ -143,7 +143,7 @@
                 <p>
                     <a href="https://www.educative.io/courses/web-security-access-management-jwt-oauth2-openid-connect/what-is-encryption"
                         target="_blank">
-                        Encription + SSL Certificate + HTTPS + Cookies
+                        Encryption + SSL Certificate + HTTPS + Cookies
                     </a>
                 </p>
 
@@ -152,7 +152,7 @@
             <div class="card">
                 <h2>Denial-of-Service Attack</h2>
                 <h5>DoS, Oct 30, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id="Dos_Img">
+                <div class="fakeimg" style="height:200px;" id="DosImg">
                 </div>
 
                 <p>A denial of service or DoS, attack is a type of attack in which the attacker tries to crash an
@@ -173,7 +173,7 @@
             <div class="card">
                 <h2>Cross-Origin Resource Sharing</h2>
                 <h5>CORS, Oct 29, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id=CORS_Img">
+                <div class="fakeimg" style="height:200px;" id="CORS_Img">
                 </div>
 
                 <p>CORS (Cross-Origin Resource Sharing) is a system, consisting of transmitting HTTP headers, that
@@ -193,7 +193,7 @@
             <div class="card">
                 <h2>Cross-site scripting</h2>
                 <h5>CSS, Oct 28, 2024</h5>
-                <div class="fakeimg" style="height:200px;" id="CSS_Img">
+                <div class="fakeimg" style="height:200px;" id="CrossSideScript_Img">
                 </div>
 
                 <p>Cross-site scripting (XSS) is a security exploit which allows an attacker to inject into a website
@@ -668,18 +668,22 @@
         <div class="rightcolumn">
             <div class="card">
                 <h2>About Me</h2>
-                <div class="fakeimg" style="height:100px;">Image</div>
-                <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+                <div class="fakeimg" style="height:100px;" id="myImage"></div>
+                <p>Hi this is Raghava.</p>
+            </div>
+            <div class="card">
+                <h3>Follow Me</h3>
+                <p>
+                    <a href="https://www.linkedin.com/in/raghava-dudi/" target="_blank">
+                        Lined-In
+                    </a>
+                </p>
             </div>
             <div class="card">
                 <h3>Popular Post</h3>
                 <div class="fakeimg">Image</div><br>
                 <div class="fakeimg">Image</div><br>
                 <div class="fakeimg">Image</div>
-            </div>
-            <div class="card">
-                <h3>Follow Me</h3>
-                <p>Some text..</p>
             </div>
         </div>
     </div>
