--- a/index.html
+++ b/index.html
@@ -17,6 +17,88 @@
     <div class="row">
         <div class="leftcolumn">
 
+            <div class="card">
+                <h2>Introduction to NodeJS</h2>
+                <h5>NodeJS Intro, Nov 15, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="nodeJSLinksImg">
+                </div>
+                <div>
+                    Node.js has an event-driven architecture capable of asynchronous I/O. These design choices aim to
+                    optimize throughput and scalability in web applications with many input/output operations, as well
+                    as for real-time Web applications (e.g., real-time communication programs and browser games).[7]
+                </div>
+                <div>
+                    A Node.js app runs in a single process, without creating a new thread for every request. Node.js
+                    provides a set of asynchronous I/O primitives in its standard library that prevent JavaScript code
+                    from blocking and generally, libraries in Node.js are written using non-blocking paradigms, making
+                    blocking behavior the exception rather than the norm.
+                </div>
+
+                <div>
+                    When Node.js performs an I/O operation, like reading from the network, accessing a database or the
+                    filesystem, instead of blocking the thread and wasting CPU cycles waiting, Node.js will resume the
+                    operations when the response comes back.
+                </div>
+
+                <p>
+                    Following are the links for reference:
+                </p>
+                <p>
+                    <a href="https://nodejs.org/en/learn/getting-started/introduction-to-nodejs" target="_blank">
+                        Node JS Introduction
+                    </a>
+                </p>
+            </div>
+
+
+            <div class="card">
+                <h2>What is Linux?</h2>
+                <h5>Linux overview, Nov 14, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="linuxLinksImg">
+                </div>
+                <div>
+                    Linux is a Unix-based, open-source operating system. Created by Linus Torvalds in 1991, Linux has
+                    grown to be a major force in the tech world: powering anything from smartphones and servers to
+                    supercomputers, including embedded systems. An open-source operating system is one whose source code
+                    is made available for viewing, modification, and distribution by anybody, hence, by implication, a
+                    collaborative and innovative community.
+                </div>
+                <p>
+                    Following are the links for reference:
+                </p>
+                <p>
+                    <a href="https://www.geeksforgeeks.org/30-days-of-linux/" target="_blank">
+                        Linux Complete guide link
+                    </a>
+                </p>
+                <p>
+                    <a href="https://en.wikipedia.org/wiki/Linux" target="_blank">
+                        Linux Wiki Link
+                    </a>
+                </p>
+            </div>
+
+            <div class="card">
+                <h2>JQuery</h2>
+                <h5>JQuery Intro, Nov 13, 2024</h5>
+                <div class="fakeimg" style="height:200px;" id="jqueryLinksImg">
+                </div>
+                <div>
+                    jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document
+                    traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API
+                    that works across a multitude of browsers. With a combination of versatility and extensibility,
+                    jQuery has changed the way that millions of people write JavaScript.
+                </div>
+
+                <p>
+                    Following are the links for reference:
+                </p>
+                <p>
+                    <a href="https://jquery.com/" target="_blank">
+                        Jquery Home Page Link
+                    </a>
+                </p>
+            </div>
 
             <div class="card">
                 <h2>Document Object Model (DOM)</h2>
